# mm-solver

./: .gitignore  .gitmodules  CMakeLists.txt
matrices/Flan_1565/: ILU.jsonc  download.sh
matrices/case02/: ILU.jsonc
matrices/cfd2/: ILU.jsonc  download.sh
slurm/compile/: job.sh  start.sh
slurm/solve/: job.sh  start.sh
src/: CMakeLists.txt  cudaHelper.hpp  main.cpp  solver-hypre.cpp  solver-hypre.hpp  solver.cpp  solver.hpp
